2003-10-08  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>):  Minor simplification/optimization.

	* ELisp.java (getTypeFor):  Fix typo.

2003-05-17  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody):  Use getName to test for 'interactive.
	* defcustom.java (scanForDefinitions):  Use getName for Symbols.

2003-02-08  Per Bothner  <per@bothner.com>

	* SaveExcursion.java (<init>):  Fix typo.
	Reported by Knut Wannheden <d96knut@dtek.chalmers.se>.

2002-07-28  Per Bothner  <per@bothner.com>

	* CatchableException.java: New class, extends RuntimeException.
	* Makefile.am (java_sources):  Add CatchableException.java.
	* MiscOps.scm (catch, throw):  New definitions.

2002-03-19  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>):  Define self-insert-command.
	* SaveExcursion.java (savePointMark, restoreBufferPointMark):
	Indirect to new Buffer methods.

2002-01-31  Per Bothner  <per@bothner.com>

	* ELisp.java (loadClass, defineAll):  Now inherited.
	(defineFromFieldValue):  New, called from inherited defineAll.

2001-10-05  Per Bothner  <per@bothner.com>

	* SaveExcursion.java:  Update for CharSequence -> CharSeq renaming.

2001-06-19  Per Bothner  <per@bothner.com>

	* MiscOps.scm (message):  Allow and ignore extra arguments.

	* ELisp.java (<init>):  Use SymbolTable.make.
	* ELisp.java (<init>):  Fix initialization of t and nil.
	* lambda.java (rewriteBody): "interactive" symbol can be Binding.

2001-06-17  Per Bothner  <per@bothner.com>

	* ELisp.java:  Change to extend Lisp2.
	Adjust for Symbol and ObArray->SymbolTable moved.
	(<init>):  Load new gnu.commonlisp.lisp.PrimOps instead.
	* Symbol.java:  Moved to gnu.commonlisp.lang.
	* ObArray.java:  Moved to gnu.commonlisp.lang.SymbolTable.
	* SymbolOps.scm, StringOps.scm, ArrayOps.scm, ListOps.scm:  Removed,
	with code moved to gnu.commonlisp.lang.PrimOps.
	* MiscOps.scm (make-local-variable, emacs:read):  Moved here
	* Makefile.am:  Updated.